--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,18 @@
 {
+    "makefile.extensionOutputFolder": "./.vscode",
     "files.associations": {
-        "stdlib.h": "c"
-    }
+        "push_swap.h": "c",
+        "libft.h": "c",
+        "minishell.h": "c",
+        "readline.h": "c",
+        "history.h": "c",
+        "*.c": "c",
+        "hash.h": "c",
+        "wait.h": "c",
+        "stddef.h": "c"
+    },
+    "C_Cpp.formatting": "Disabled",
+    "editor.detectIndentation": true,
+    "editor.formatOnSave": true,
+    "C_Cpp.errorSquiggles": "Disabled",
 }
