--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/philo", //path to your programs exe and exe name
-            "args": ["4", "800", "200", "200"],
+            "args": ["5", "800", "200", "200","7"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
